<resources>
    <string name="app_name">HRM</string>


    <string name="requests">Requests</string>
    <string name="team">Team</string>
    <string name="profile">Profile</string>
    <string name="job_type">Job type</string>
    <string name="experience_level">Experience level</string>
    <string name="show_result">Show result</string>
    <string name="clear">Clear</string>
    <string name="notifications">Notifications</string>
    <string name="user_friendly_experience">User Friendly Experience</string>
    <string name="drive_employee_engagement_and_reduce_administrative_burden_with_a_solution_that_is_designed_to_look_work_and_feel_like_a_consumer_application">Drive employee engagement and reduce administrative burden with a solution that is designed to look,work,and feel like a consumer application</string>
    <string name="mobile_accessibility">Mobile Accessibility</string>
    <string name="empower_employees_to_access_and_interact_with_their_core_hr_systems_like_payroll_benefits_and_time_management">Empower employees to access and interact with their core HR systems like payroll, benefits, and time management</string>
    <string name="attendance">Attendance</string>
    <string name="streamline_time_tracking_and_scheduling_so_you_can_decrease_payroll_errors_reduce_overtime_costs_and_improve_productivity">Streamline time tracking and scheduling so you can decrease payroll errors, reduce overtime costs, and improve productivity</string>
    <string name="announcements">Announcements</string>
    <string name="get_notified_when_event_take_a_place">Get notified when event take a place</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="press_the_above_button_to_retry">press the above button to retry</string>


    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="working_hours">Working hours</string>
    <string name="delays">Delays</string>
    <string name="excuse_ndelays">Excuses</string>
    <string name="extra_hours">Extra hours</string>
    <string name="over_time">Over time</string>
    <string name="missing_punch">Missing punch</string>
    <string name="basic_salary_and_additions">Basic salary and additions</string>
    <string name="salary">Salary</string>
    <string name="bonus">Bonus</string>
    <string name="late">(Late)</string>
    <string name="miss_punch">Miss punch</string>
    <string name="enter_a_name_or_an_id">Enter a name or an ID</string>
    <string name="post_date">Post date</string>
    <string name="pick_a_start_date">Pick a start date</string>
    <string name="pick_an_end_date">Pick an end date</string>
    <string name="salary_details">Salary Details</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="basic_information">Basic Information</string>
    <string name="email_address">Email address</string>
    <string name="employee_id">Employee ID</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="birth_date">Birth date</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="marital_status">Marital status</string>
    <string name="work_information">Work Information</string>
    <string name="department">Department</string>
    <string name="reporting_to">Reporting to</string>
    <string name="date_on_joining">Date on joining</string>
    <string name="employee_status">Employee status</string>
    <string name="role">Role</string>
    <string name="work_phone">Work phone</string>
    <string name="experience">Experience</string>
    <string name="base_salary">Base salary</string>
    <string name="deduction">Deduction</string>
    <string name="statistics">Statistics</string>
    <string name="present">Present</string>
    <string name="vacation">Vacation</string>
    <string name="absent">Absent</string>
    <string name="delay">Delay</string>
    <string name="more">More</string>
    <string name="team_members">Team members</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="request">Request</string>
    <string name="home">Home</string>
    <string name="user_information">User information</string>
    <string name="deduction_details">Deduction details</string>
    <string name="total_salary">Total salary</string>
    <string name="total_deduction">Total deduction</string>
    <string name="language">Language</string>
    <string name="login_success">Logged in successfully</string>
    <string name="you_have_no_deductions">You have no deductions</string>
    <string name="day">" Day"</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="no_data">There is no data</string>
    <string name="no_check_in_yet">Missed in punch</string>
    <string name="no_check_out_yet">Missed in punch</string>
    <string name="two_zeros">:00</string>
    <string name="no_attendance">You have no attendance report this month</string>
    <string name="pending">Pending</string>
    <string name="waiting_for_approv">WaitingForApproval</string>
    <string name="canceled">Canceled</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="dash">-</string>
    <string name="remaining">Remaining :</string>

    <string name="days">Days</string>
    <string name="you_have_no_salary_details_yet">You have no salary details yet</string>
    <string name="there_is_no_pending_requests">There is no pending requests</string>
    <string name="you_have_no_requests_yet">you have no requests yet</string>
    <string name="loading">Loading</string>
    <string name="request_sent">Your request has been sent successfully</string>
    <string name="ops">Oops...</string>
    <string name="sending_request">Sending your request</string>
    <string name="total_delay">Total Delay</string>
    <string name="total_time">Total Time</string>
    <string name="applied_duration">Applied Duration</string>
    <string name="reason">Reason</string>
    <string name="type_of_leave">Type of Leave</string>
    <string name="casncel_request">Cancel Request</string>
    <string name="msg_cancel">Are you sure you want to cancel this request</string>
    <string name="dismiss">dismiss</string>
    <string name="ok">ok</string>
    <string name="missed_out_punch">Missed out Punch</string>
    <string name="remove">Remove</string>
    <string name="edit">Change Profile Picture</string>
    <string name="select_time">Select time</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="employees">Employees</string>
    <string name="show_more">Show More</string>
    <string name="balance">Balance</string>
    <string name="leaves_credit">Leaves Credit</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="cancel">cancel</string>
    <string name="msg_no_members">There is no members in your team</string>
    <string name="hourly">Hourly</string>
    <string name="overtime">Overtime</string>
    <string name="miss_punch_type">Miss Punch</string>
    <string name="no_reason">No Reason</string>
    <string name="new_requests">New Requests</string>
    <string name="history">History</string>
    <string name="deductions">Deductions</string>
    <string name="logging_in">Logging into HR</string>

</resources>
