<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile"
    app:startDestination="@id/profileFragment">


    <fragment
        android:id="@+id/profileFragment"
        android:name="com.enjaz.hr.ui.profile.ProfileFragment"
        android:label="@string/profile" />
    <fragment
        android:id="@+id/userInfoFragment"
        android:name="com.enjaz.hr.ui.profile.UserInfoFragment"
        android:label="@string/user_information" />
    <fragment
        android:id="@+id/salaryDetailsFragment"
        android:name="com.enjaz.hr.ui.profile.SalaryDetailsFragment"
        android:label="@string/salary_details" />
    <fragment
        android:id="@+id/deductionDetailsFragment"
        android:name="com.enjaz.hr.ui.profile.DeductionDetailsFragment"
        android:label="Deduction details" />
    <fragment
        android:id="@+id/balanceFragment"
        android:name="com.enjaz.hr.ui.profile.BalanceFragment"
        android:label="Balance" />
        android:label="@string/deduction_details" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.enjaz.hr.ui.settings.SettingsFragment"
        android:label="@string/settings" />


</navigation>
