<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/enter_a_name_or_an_id"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="leave type"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_job"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/ch1"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hourly"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipCornerRadius="8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ch2"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vacation"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipCornerRadius="8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ch3"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OverTime"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipCornerRadius="8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ch4"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Normal day leave"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipCornerRadius="8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ch5"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Miss Punch"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipCornerRadius="8dp" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Request status"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_status"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pending"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipCornerRadius="8dp" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Accepted"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipCornerRadius="8dp" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rejected"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipCornerRadius="8dp" />
            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Canceled"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:chipCornerRadius="8dp" />
        </com.google.android.material.chip.ChipGroup>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/tv_from_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/from"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupStatus" />


        <TextView
            android:id="@+id/tv_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rect"
            android:backgroundTint="@color/grey_200"
            android:paddingVertical="8dp"
            android:text="@string/pick_a_start_date"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_from_title" />

        <TextView
            android:id="@+id/tv_to_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/to"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_from_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_from" />


        <TextView
            android:id="@+id/tv_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rect"
            android:backgroundTint="@color/grey_200"
            android:paddingVertical="8dp"
            android:text="@string/pick_an_end_date"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_to_title" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Choice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/show_result"
            android:textAllCaps="false"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_to" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/clear"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/btn_Choice" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>